fix(#382): hash link error (#384)
* fix(#382): hash link error

* chore: remove scrollbar on token selection panel

* test: unit test

--- a/packages/apps/styles/apps.scss
+++ b/packages/apps/styles/apps.scss
@@ -27,3 +27,14 @@
     right: calc((100vw - 1536px) / 2);
   }
 }
+
+.destination-dropdown .ant-cascader-menu {
+  overflow-y: scroll;
+  overflow-x: hidden;
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+
+  &::-webkit-scrollbar {
+    display: none;
+  }
+}
